# drippy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
drippy/: __init__.py  drippy.py
